# fex

./: .gitignore  .ocamlformat  Makefile  README.md  dune-project  fex.opam  fex.opam.locked
.github/workflows/: workflow.yml
bin_test/: arguments.t  dune  examples.t  help.t
bnf/: simple.bnf
compiler/: ast.ml  ast.mli  combiner.ml  combiner.mli  dune  fex.ml  fex_compiler.ml  fex_compiler.mli  filter_lexer.mll  filter_parser.messages  filter_parser.mly  lexer.mll  match_in_order.ml  match_in_order.mli  match_number.ml  match_number.mli  match_string.ml  match_string.mli  predicate.ml  predicate.mli  tokens.mly
compiler_test/: combiner_test.ml  dune  fex_compiler_test.ml  messages_test.ml  parser_test.ml  predicate_test.ml
fex_js/: dune  fex.ml
fex_js_test/: example.t
flattener/: dune  fex_flattener.ml  fex_flattener.mli  flattener.ml  flattener.mli  pair.ml  pair.mli
flattener_test/: dune  flattener_test.ml  json_test.ml
test/: dune  fex.ml  parser_test.ml  predicate_test.ml
