(library
 (name fex_compiler)
 (public_name fex.compiler)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq))
 (libraries menhirLib))

(ocamllex
 (modules lexer))

(menhir
 (modules filter_parser)
 (flags --dump --explain --table))

(rule
 (targets filter_parser_messages.ml)
 (deps filter_parser.messages filter_parser.mly)
 (action
  (with-stdout-to
   %{targets}
   (run menhir --compile-errors %{deps}))))
